<resources>
    <string name="app_name">Blood Donation Gallery</string>

    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_ins_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_banner_ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_native_ad_id">ca-app-pub-3940256099942544/2247696110</string>


    <string name="wc">Welcome Our SignUp Page</string>
    <string name="choiceone">Please Choose One?</string>
    <string name="become_a_donner">Be Come A Donner</string>
    <string name="Recipient">Recipient Account</string>
    <string name="ihaveaccout">All ready Registered?</string>
    <string name="signin">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="createAccount">I have no account</string>
    <string name="email">Email</string>
    <string name="iamarecipient">I AM A Recipient</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="usercreact">User Correct Email and Password </string>
    <string name="deshboard">Dashboard</string>


    <string name="navigation_draw_open">Open navigation drawer</string>
    <string name="navigation_draw_close">Open navigation close</string>

    ///notification
    <string name="notification">Notification</string>


    ///signup
    <string name="name">Name</string>
    <string name="phone">Phone </string>
    <string name="phone_from">Phone (01XXXXXXXXX)</string>
    <string name="gender">Gender</string>
    <string name="bloodgroup">Blood Group</string>
    <string name="city">City</string>
    <string name="useId">NID No (Optional)</string>
    <string name="age">Age</string>
    <string name="Address">Address</string>
    <string name="helperText">Required*</string>
    <string name="donner_regi_btn">Register</string>
    <string name="blood">Blood</string>
    <string name="accounttype">Account</string>

    <string name="none">None</string>
    <string name="status">Status</string>
    <string name="phone1">Phone</string>
    <string name="nid">NID No</string>
    ///login
    <string name="forgotpassword">Forgot Password?</string>

    //blood group array
    <string-array name="blood_group">
        <item>Select Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    <string-array name="status_group">
        <item>Inactive</item>
        <item>Active</item>
    </string-array>


    <string name="bloodgroup_manu"> Blood Group</string>
    <string name="A_positive_manu"> A+ (Positive)</string>
    <string name="A_nagative_manu"> A- (Negative)</string>
    <string name="b_positive_manu"> B+ (Positive)</string>
    <string name="b_nagative_manu"> B- (Negative)</string>
    <string name="o_nagative_manu"> O- (Negative)</string>
    <string name="ab_nagative_manu"> AB- (Negative) </string>
    <string name="o_positive_manu"> O+ (Positive)</string>
    <string name="ab_positive_manu"> AB+ (Positive)</string>


    <string name="actions">Actions</string>
    <string name="ntification">Notification</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="bangla">বাংলা</string>
    <string name="english">English</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="signout">SignOut</string>

    /////dialog
    <string name="notfound">Not Found!</string>
    <string name="noregisteryet">No Register Yet</string>
    <string name="ok">Ok</string>

    <string name="ambulance">Ambulance</string>
    <string name="bloodbank">Blood Bank</string>

    <string name="ofline">Offline</string>
    <string name="youareofline">You are offline</string>
    <string name="gobackonline">Go back online to use</string>
    <string name="retry">Retry</string>


    <string name="communications">Communications</string>
    <string name="about">About</string>
    <string name="shareapp">Share App</string>
    <string name="search">Search</string>
    <string name="setting">Settings</string>

    <string name="feedback">Feedback</string>
    <string name="admincontract">Admin Contract</string>
    <string name="rate">Rate App</string>
    <string name="namep">Name: </string>
    <string name="phonep">Phone: </string>
    <string name="emailp">Email:</string>
    <string name="cityp">City: </string>
    <string name="bloodgroupp">Blood Group: </string>
    <string name="addressp">Address: </string>
    <string name="editprofile">Edit Profile</string>
    <string name="useridp">NID No#: </string>
    <string name="typep">Type: </string>
    <string name="genderp">Gender: </string>
    <string name="agep">Age: </string>
    <string name="lastdatedonation">Update blood group: </string>
    <string name="lastdonation">Donated</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="needp">Need: </string>
    <string name="donatep">Status: </string>
    <string name="version">Version</string>
    <string name="versioncode">1.0.1</string>


    //updateprofile

    <string name="updateprofile">Update Profile</string>
    <string name="lastdoneteDate">Last Donate Date</string>
    <string name="update">Update</string>
    <string name="backtoprofile">Back to Home</string>
    <string name="info">Blood Info</string>
    <string name="needdate">Need Date</string>
    <string name="nearwithme">My Type</string>


    ///email verification
    <string name="noverify">No Verify </string>
    <string name="Clicktoverifyemail">Click to Verify Email</string>
    <string name="noverifyemail">
        Click to Email Verification</string>
    <string name="verified">Verified</string>
    <string name="noemaiverified">No verified email address</string>

    <string name="forgot">Forgot Password</string>
    <string name="sendemail">Send To Email </string>
    <string name="Ihavegot">I have Remind Password</string>
    <string name="backSingIn">Back To SignIn</string>


    ///info page

    <string name="bloodtype">Blood Type</string>
    <string name="candonete">Can Donate Red Blood Cells To</string>
    <string name="canrecive">Can Receive Red Blood Cells From</string>
    <string name="o">O+</string>
    <string name="o1">O-</string>
    <string name="a">A+</string>
    <string name="a1">A-</string>
    <string name="b">B+</string>
    <string name="b1">B-</string>
    <string name="ab">AB+</string>
    <string name="ab1">AB-</string>
    <string name="everyone">Everyone</string>
    <string name="cd1">O+, O-</string>
    <string name="cd2">A+, A-, O+, O-</string>
    <string name="cd3">B+, B-, O+, O-</string>
    <string name="cr2">A, A-, AB, AB-</string>
    <string name="cr3">B, B-, AB, AB-</string>
    <string name="cr4">AB, AB-</string>
    <string name="plasmaPlatelet">Plasma and Platelet</string>
    <string name="plasmaPlatelet2">When it comes to blood components,
        compatibility is the opposite of whole blood. Donors with
        Type AB blood are the universal donors of
        platelets and plasma.</string>

    <string name="whileblood">Whole Blood</string>
    <string name="whileblood2">There are eight different blood types, and they are not
        always compatible with each other.
        Interestingly, people who have O-negative blood are
        considered universal donors for the entire population.</string>
    <string name="cdwO">O+, A+, B+, AB+</string>
    <string name="cdwA">A+, AB+</string>
    <string name="cdwA1">A+, A-, AB+, AB-</string>
    <string name="cdwB">B+, AB+</string>
    <string name="cdwB1">B+, B-, AB-, AB+</string>
    <string name="cdwAB">AB+</string>
    <string name="cdwAB1">AB-, AB+</string>
    <string name="crwO">O+, O-</string>
    <string name="crwO1">O-</string>
    <string name="crwA">A+, A-, O+, O-</string>
    <string name="crwA1">A-, O-</string>
    <string name="crwB">B+, B-, O+, O-</string>
    <string name="crwB1">B-, O-</string>
    <string name="crwAB1">AB-, A-, B-,O-</string>

    ////exit dilog

    <string name="exit_msg">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="campaign">Campaign</string>
    <string name="totalregister">Total User</string>D
    <string name="alluser">All User</string>
    <string name="activeusers">Active Users</string>

    <string name="search_city">Search City</string>

    <string name="about_sub"></string>
    <string name="about_t1">“আমার রক্তে যদি সহযোগিতা করে- মুমূর্ষ রোগীর প্রাণ, তাহলে আমি কেন করবোনা স্বেচ্ছায় রক্তদান?”</string>
    <string name="about_t2">“স্বেচ্ছায় রক্ত দিন, জীবন বাঁচান! আমাদের অ্যাটি সম্পুর্ন ফ্রি, আমাদের অ্যাটিতে দু’ ধরনের ইউজার রয়েছে রক্ত দাতা ও রক্ত গ্রহিতা।
ইউজার তার প্রোয়োজন অনুশারে একাউন  তৈরি করতে পারবে। যদি রক্ত দাতা  হিসেবে একাউন্ট খুলেন তাহলে সকল রক্ত গ্রহিতার একাউন্ট দেখতে পারবেন আবার যদি রক্ত গ্রহিতা  হিসেবে একাউন্ট খুলেন তাহলে সকল রক্ত দাতার একাউন্ট দেখতে পারবেন।
”</string>
    <string name="about_t3">“একাউন খোলার সময় আপনার একাউন্টি ভেরিফিকেশন করা হয় নাই, দয়া করে প্রোফাইন সেকশনে গিয়ে আপনার একাউন্টি ভেরিফিকেশন করুন, অন্যথায় আপনার একান্টে কোনো প্রকার সমস্যা হলে
একাউন্টি ডিলিট হয়ে যেতে পারে।”</string>
    <string name="about_t4">“আপানর যদি রক্তের পোয়োজন বা রক্ত দিতে আগ্রহি হন তাহলে প্রোফাই আপডেট সেকশনে গিয়ে একাউটি একটিভ করুন। একাউন্টি Active থাকলে সহজে  রক্ত দাতা বা রক্ত গ্রহিতা  আপনাকে খুজে পেতে পারবে।
”</string>
    <string name="about_t5">“রক্ত দাতা যদি পূর্বে রক্ত দিয়ে থাকেন তাহলে আপনার রক্ত দিবার দিনটি প্রোফাই আপডতে অপশন থেকে আপনার ডোনেশন তারিখটি আপডেট করুন।
”</string>
    <string name="about_t6">“রক্ত গ্রহিতার যদি রক্তের প্রোয়োজন হয় তাহলে একাউটি একটিভ করে, যে দিন রক্ত প্রোয়োজন ঐ তারিখটি প্রোফাই আপডেট সেকশনে থেকে আপডেট করুন।”</string>
<string name="about_t7">“আপনার লোকাল এরিয়া ভিত্তিক ব্লাড ব্যাংক ও এম্বোলেন্স খোজতে পারবেন।”</string>
<string name="about_t8">“আপনার কোনো পরামর্শ, অভিজোক বা সবার কাছে রক্তের জন্য নোটিফিকেশ পাঠাতে চাইলেঃ ব্লাড গ্রুপ , নাম , মোবাইল নাম্বার এবং লোকেন  admin contract বা sohaghlab@gmail.com যোগাযোগ  করুন, ধন্যবাদ।
”</string>

    <string name="about_range">১) ১৮ বছর থেকে ৬০ বছরের যেকোনো সুস্থদেহের মানুষ রক্ত দান করতে পারবেন। ২) আপনার ওজন অবশ্যই ৫০ কিলোগ্রাম কিংবা তার বেশি হতে হবে। ৩) মহিলাদের ক্ষেত্রে ৪ মাস অন্তর-অন্তর, পুরুষদের ক্ষেত্রে ৩ মাস অন্তর অন্তর রক্ত-দান করা যায়। ৪) রক্তে হিমোগ্লোবিনের পরিমাণ, রক্তচাপ ও শরীরের তাপমাত্রা স্বাভাবিক থাকতে হবে।</string>

</resources>