<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
    android:id="@+id/home"
    android:icon="@drawable/ic_home"
    android:title="Home"/>
    <item
        android:id="@+id/emailme"
        android:icon="@drawable/ic_person"
        android:title="@string/noverify"/>

    <item
        android:id="@+id/deshboard"
        android:icon="@drawable/ic_deshboard"
        android:title="@string/deshboard"/>








    <item android:title="@string/bloodgroup_manu">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/a_positive"
                    android:icon="@drawable/ap"
                    android:title="@string/A_positive_manu"/>
                <item
                    android:id="@+id/a_negative"
                    android:icon="@drawable/an"
                    android:title="@string/A_nagative_manu"/>

                <item
                    android:id="@+id/b_positive"
                    android:icon="@drawable/bp"
                    android:title="@string/b_positive_manu"/>

                <item
                    android:id="@+id/b_negative"
                    android:icon="@drawable/bn"
                    android:title="@string/b_nagative_manu"/>

                <item
                    android:id="@+id/o_positive"
                    android:icon="@drawable/op"
                    android:title="@string/o_positive_manu"/>

                <item
                    android:id="@+id/o_negative"
                    android:icon="@drawable/on"
                    android:title="@string/o_nagative_manu"/>

                <item
                    android:id="@+id/ab_positive"
                    android:icon="@drawable/abp"
                    android:title="@string/ab_positive_manu"/>

                <item
                    android:id="@+id/ab_negative"
                    android:icon="@drawable/abn"
                    android:title="@string/ab_nagative_manu"/>


            </group>
        </menu>
    </item>

    <item android:title="@string/actions">
    <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/changelanguage"
                    android:icon="@drawable/ic_language"
                    android:title="@string/english"/>


                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout"/>

            </group>
        </menu>
    </item>

    <item android:title="@string/communications">
        <menu>
            <group android:checkableBehavior="single">

            </group>
        </menu>
    </item>


</menu>