<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_notification"
        app:showAsAction="always"
        android:title="@string/notification"/>
    <item
        android:id="@+id/about2"
        android:icon="@color/purple_700"
        android:title="@string/about"/>
    <item
        android:id="@+id/share2"
        android:icon="@color/purple_700"
        android:title="@string/shareapp"/>
    <item
        android:id="@+id/rate"
        android:icon="@color/purple_700"
        android:title="@string/rate"/>
    <item
        android:id="@+id/privacy_policy"
        android:icon="@color/purple_700"
        android:title="@string/privacy_policy"/>



</menu>