<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bloodback"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:text="@string/about"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:layout_height="wrap_content"/>


            <TextView
                android:layout_width="match_parent"
                android:text="@string/app_name"
               android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/about_t1"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="16dp"
                android:padding="5dp"
                android:background="@color/white"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/about_range"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="16dp"
                android:padding="5dp"
                android:background="@color/white"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/about_t2"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="16dp"
                android:padding="5dp"
                android:background="@color/white"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:text="@string/about_t3"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="16dp"
                android:padding="5dp"
                android:background="@color/white"
                android:layout_height="wrap_content"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about_t4"
                android:padding="5dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:text="@string/about_t5"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="16dp"
                android:padding="5dp"
                android:background="@color/white"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/about_t6"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="16dp"
                android:padding="5dp"
                android:background="@color/white"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about_t7"
                android:padding="5dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:text="@string/about_t8"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="16dp"
                android:padding="5dp"
                android:background="@color/white"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>





</LinearLayout>