<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">

  <LinearLayout
      android:layout_width="wrap_content"
      android:padding="40dp"
      android:layout_height="wrap_content"
      android:orientation="vertical">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/nointernet"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/youareofline"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/gobackonline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/app_name" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:paddingLeft="40dp"
        android:layout_gravity="center"
        android:id="@+id/retry"

        android:fontFamily="@font/poppins"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:paddingRight="40dp"
        android:text="@string/retry"/>



  </LinearLayout>



</LinearLayout>