<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@drawable/back"
    android:layout_height="match_parent"
    tools:context=".SelectRegiActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        app:cardElevation="10dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/biconb"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/wc"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/choiceone"
                android:textSize="18dp" />

            <Button
                android:id="@+id/donner"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins"
                android:padding="8dp"
                android:text="@string/become_a_donner"
                android:textAllCaps="false"
                android:background="@drawable/cercle_btn"
                android:textSize="16dp" />

            <Button
                android:layout_width="250dp"
                android:id="@+id/recipient"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:padding="8dp"
                android:background="@drawable/cercle_btn"
                android:text="@string/Recipient"
                android:textAllCaps="false"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/ihaveaccout" />

            <TextView
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/signin"
                android:textSize="15dp"
                android:textColor="@color/purple_700"
                android:textStyle="bold" />




        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>